fix add form wrapping on really wide screens

--- a/src/assets/styles/facilityForm.css
+++ b/src/assets/styles/facilityForm.css
@@ -78,7 +78,7 @@ form.facilityForm > div.buttons > button {
    ===================================================*/
 @media only screen and (min-width: 901px) {
   form.facilityForm > fieldset {
-    flex: 1 1 40vw;
+    flex: 1 1 44%;
     margin: 0 0.4em;
   }
 }
